--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node app.js",
         "dev": "nodemon app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -26,6 +26,7 @@
         "express": "^4.17.3"
     },
     "devDependencies": {
-        "eslint": "^8.8.0"
+        "eslint": "^8.8.0",
+        "jest": "^27.5.1"
     }
 }
