--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "eslint": "^8.8.0",
-        "jest": "^27.5.1"
+        "jest": "^27.5.1",
+        "nodemon": "^2.0.15"
     }
 }
