--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "node": "16.x"
     },
     "scripts": {
-        "start": "node app.js",
+        "start": "node src/app.js",
         "dev": "nodemon -e js,yaml,json,md",
         "build": "npm i",
         "test": "jest"
